@@ -1,7 +1,13 @@
-2015-06-01  Jacob Fenton  <bocajnotnef@gmail.com>
+2015-06-01  Ja ob Fenton  <bocajnotnef@gmail.com>
 
    * scripts/normalize-by-median.py: minor refactoring, fixed -R
    * tests/test_scripts.py: added test for normalize's -R arg
+   
+2015-06-01 Tamer Mansour <drtamermansour@gmail.com>
+
+   * scripts/ormalize-by-median.py:  changed to count kmers from both PE reads 
+   when either one of them is below the coverage cutoff
+   * tests/test_scripts.py: Added tests for new behaviour
 
 2015-05-26  Titus Brown  <titus@idyll.org>
 
